fixed: table overflow, characters page transitions

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -591,7 +591,7 @@ body {
 }
 .table-container {
   margin: 0 auto 1rem;
-  height: 78vh;
+  height: 75vh;
   display: flex;
   width: 90%;
   align-items: flex-start;
